# shader-pack

./: Cargo.toml  README.md
examples/: syntax.spk
src/: diagnostics.rs  lib.rs  parse.rs  span.rs  symbol.rs
src/diagnostics/: codes.rs  item.rs  sender.rs  stringify.rs
src/parse/: ast.rs  cursor.rs  lexer.rs  low_lexer.rs  parse.rs  symbols.rs
src/parse/ast/: node_id.rs  node_id_allocator.rs
src/parse/lexer/: token.rs  token_kind.rs  token_number_literal_kind.rs
src/parse/low_lexer/: low_token.rs  low_token_kind.rs  low_token_number_literal_kind.rs
src/span/: line_col.rs  source_file.rs  source_map.rs  span.rs
src/symbol/: chunk.rs  interner.rs  symbol.rs
